CF-SecurityGroup.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create base Live Security Groups.
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC).
    Default: vpc-2aea414f
  VpcCidrBlock:
    Description: Cidr routing block for VPC.
    Type: String
    Default: 192.168.0.0/16
  Subnet1ACidrBlock:
    Description: Cidr routing block for Subnet 1a.
    Type: String
    Default: 192.168.224.0/24
  Subnet1BCidrBlock:
    Description: Cidr routing block for Subnet 1b.
    Type: String
    Default: 192.168.225.0/24
  Subnet2ACidrBlock:
    Description: Cidr routing block for Subnet 2a.
    Type: String
    Default: 192.168.226.0/24
  Subnet2BCidrBlock:
    Description: Cidr routing block for Subnet 2b.
    Type: String
    Default: 192.168.227.0/24
  Subnet3ACidrBlock:
    Description: Cidr routing block for Internal c.
    Type: String
    Default: 192.168.222.0/24
  Subnet3BCidrBlock:
    Description: Cidr routing block for Internal a.
    Type: String
    Default: 192.168.221.0/24
  Subnet4aCidrBlock:
    Description: Cidr routing block for Euinfra 1a.
    Type: String
    Default: 192.168.221.0/24
  Subnet4BCidrBlock:
    Description: Cidr routing block for Euinfra 1c.
    Type: String
    Default: 192.168.240.0/24
  Country:
    Description: Country code for stack.
    Type: String
  Environment:
    Description: Type of environment to launch.
    Type: String
    Default: LIVE
Resources:
  ADMINSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC Admin group, seperate from default as this is an intentional
        group and to be added to all Instances within VPC.
      SecurityGroupIngress:
      - CidrIp: 178.23.128.190/32
        IpProtocol: "-1"
      - CidrIp: 192.168.0.0/16
        IpProtocol: "-1"
      - CidrIp: 195.244.222.197/32
        IpProtocol: "-1"
      - CidrIp: 172.20.0.0/16
        IpProtocol: "-1"
      - CidrIp: 185.83.149.225/32
        IpProtocol: "-1"
      - CidrIp: 52.210.6.125/32
        IpProtocol: "-1"
      - CidrIp: 80.25.154.164/32
        IpProtocol: "-1"
      - CidrIp: 52.208.164.86/32
        IpProtocol: "-1"
      - CidrIp: 178.23.128.178/32
        IpProtocol: "-1"
      - CidrIp: 52.31.153.11/32
        IpProtocol: "-1"
      - CidrIp: 2.228.236.250/32
        IpProtocol: "-1"
      - CidrIp: 52.58.7.121/32
        IpProtocol: "-1"
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - ADMIN
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  DCSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Domain Controller Security Group.
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - DC
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  NATSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: NAT Security Group.
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - NAT
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  RDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: 195.244.222.197/32
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: 34.251.199.2/32
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: 52.17.51.153/32
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: 52.208.75.15/32
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: 52.31.128.129/32
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: 52.31.41.33/32
      - IpProtocol: tcp
        FromPort: 1433
        ToPort: 1433
        CidrIp: 52.31.55.43/32
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - RDS
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  NOSQLSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: NOSQL (Couchbase) Security Group.
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - NOSQL
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  REDISSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Redis Security Group.
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - REDIS
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  LOGAPISG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Log API Security Group.
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - LOGAPI
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  JSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: JS Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - JS
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  WEBRESSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Web Resources Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - WEBRES
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  APPSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Application Server Security Group.
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - APP
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  WEBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Web Security Group.
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - WEB
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  CHATSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Chat Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5602
        ToPort: 5602
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 12000
        ToPort: 12799
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 843
        ToPort: 843
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - CHAT
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  GAMESG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Game Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5602
        ToPort: 5602
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 12000
        ToPort: 12799
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 843
        ToPort: 843
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - GAME
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  WHOSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: WhosOn Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8443
        ToPort: 8443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8011
        ToPort: 8011
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8004
        ToPort: 8004
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - WHOS
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  CMSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: CMS Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 52.31.128.129/32
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 52.31.55.43/32
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - CMS
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  SOGEISG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SOGEI Security Group.
      SecurityGroupIngress:
      - CidrIp: 217.175.53.24/32
        IpProtocol: "-1"
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - SOGEI
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
  PROXYSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Proxy Security Group.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5501
        ToPort: 5802
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: Environment
            - Ref: Country
            - PROXY
            - SG
      - Key: Country
        Value:
          Ref: Country
      - Key: Environment
        Value:
          Ref: Environment
      VpcId:
        Ref: VpcId
Outputs:
  ADMINSG:
    Value:
      Ref: ADMINSG
  DCSG:
    Value:
      Ref: DCSG
  NATSG:
    Value:
      Ref: NATSG
  RDSSG:
    Value:
      Ref: RDSSG
  NOSQLSG:
    Value:
      Ref: NOSQLSG
  REDISSG:
    Value:
      Ref: REDISSG
  LOGAPISG:
    Value:
      Ref: LOGAPISG
  JSSG:
    Value:
      Ref: JSSG
  WEBRESSG:
    Value:
      Ref: WEBRESSG
  APPSG:
    Value:
      Ref: APPSG
  WEBSG:
    Value:
      Ref: WEBSG
  CHATSG:
    Value:
      Ref: CHATSG
  GAMESG:
    Value:
      Ref: GAMESG
  WHOSSG:
    Value:
      Ref: WHOSSG
  SOGEISG:
    Value:
      Ref: SOGEISG
  PROXYSG:
    Value:
      Ref: PROXYSG
